tests/builds/pass/pointerTest2.cpl

int main(int argc, char *argv){

	string name = "John";
	string *p = &name;

	return auxilliary(p);

}

int auxilliary(int *ptr){
	return 0;
}

